# openfmb.hmi

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.buildx  README.md  cleanup.md  command.json  data.json  docker-build.bat  docker-build.sh  docker-compose.yml  equipment.default.json  equipment.json  nginx-custom.conf  tsconfig.json  users.json
.devcontainer/: Dockerfile  devcontainer.json  post-create-setup.sh
.github/workflows/: docker.yml
.reuse/: dep5
Client/: .dockerignore  .gitignore  .npmrc  Dockerfile  angular.json  package.json  tsconfig.json
Client/e2e/src/: app.e2e-spec.ts  app.po.ts
Client/src/: config.ts  index.html  main.ts  polyfills.ts  styles.scss  test.ts  typings.d.ts
Client/src/app/: app.component.spec.ts  app.component.ts  app.effects.ts  app.module.ts  app.routing.ts  entity-metadata.ts
Client/src/app/auth/: auth.module.ts
Client/src/app/dashboard/: dashboard-routing.module.ts  dashboard.component.ts  dashboard.module.ts
Client/src/app/data-connect/: data-connect-routing.module.ts  data-connect.component.html  data-connect.component.ts  data-connect.module.ts
Client/src/app/designer/: designer-routing.module.ts  designer.component.html  designer.component.scss  designer.component.ts  designer.module.ts
Client/src/app/diagrams/: diagrams-routing.module.ts  diagrams.component.html  diagrams.component.ts  diagrams.module.ts
Client/src/app/hmi/: hmi-routing.module.ts  hmi.component.html  hmi.component.scss  (+2 more)
Client/src/assets/: env.json  env_prod.json
Client/src/environments/: environment.dev.ts  environment.prod.ts  environment.ts
Server/: .gitignore  Cargo-Docker.toml  Cargo.toml  config.toml
Server/src/: auth.rs  error.rs  handler.rs  lib.rs  logs.rs  subscriber.rs
Server/src/hmi/: coordinator.rs  export.rs  hmi.rs  hmi_publisher.rs  hmi_subscriber.rs  mod.rs  monitor.rs  nats_publisher.rs  nats_subscriber.rs  processor.rs  profile_subscriber.rs  pubsub.rs  utils.rs
Server/src/messages/: actor_ref.rs  config.rs  message_type.rs  mod.rs  openfmb_profile_type.rs  start_processing.rs
Server/src/messages/common/: mod.rs
Server/src/messages/openfmb/: mod.rs
circuit_segment_manager/: Cargo.toml
circuit_segment_manager/src/: lib.rs
circuit_segment_manager/src/actors/: mod.rs
circuit_segment_manager/src/actors/coordinator/: coordinator.rs  mod.rs  sys_event_log.rs
circuit_segment_manager/src/actors/coordinator/device/: device.rs  mod.rs  wasm_processor.rs
circuit_segment_manager/src/actors/coordinator/device/openfmb/: mod.rs  openfmb.rs
circuit_segment_manager/src/actors/coordinator/device/openfmb/disabled/: ess.rs  generation.rs  load.rs  meter.rs  solar.rs  switch.rs
circuit_segment_manager/src/actors/coordinator/device/openfmb_device/: generic_device.rs  mod.rs
circuit_segment_manager/src/actors/coordinator/device/openfmb_profile/: generic_profile.rs  mod.rs
circuit_segment_manager/src/actors/coordinator/gui/: cursive_ui.rs  mod.rs
circuit_segment_manager/src/actors/coordinator/persistor/: generic_openfmb_device_persistor.rs  generic_openfmb_profile_persistor.rs  mod.rs  persistor.rs  sleddb_persistor.rs  sqlite_persistor.rs
circuit_segment_manager/src/actors/coordinator/processor/: mod.rs
circuit_segment_manager/src/actors/coordinator/processor/algorithm/: algorithm.rs
circuit_segment_manager/src/actors/coordinator/publisher/: debug_stdout_publisher.rs  elasticsearch_publisher.rs  gui_publisher.rs  mod.rs  openfmb_file_publisher.rs  openfmb_nats_publisher.rs  publisher.rs
circuit_segment_manager/src/actors/coordinator/subscriber/: generic_openfmb_device_subscriber.rs  generic_openfmb_profile_subscriber.rs  mod.rs  openfmb_file_subscriber.rs  openfmb_nats_subscriber.rs  raw_stdin_subscriber.rs  subscriber.rs
circuit_segment_manager/src/actors/microgrid/: actor.rs  mod.rs  state.rs
circuit_segment_manager/src/messages/: actor_stats.rs  config.rs  cursive_ui.rs  debug.rs  mod.rs  openfmb_profile_type.rs  parts.rs  print_tree.rs  process_raw_stdin.rs  text_line.rs
circuit_segment_manager/src/messages/openfmb/: mod.rs
circuit_segment_manager/src/traits/: circuit_segment.rs  mod.rs
circuit_segment_manager/src/util/: init.rs  mod.rs
config/: app.toml  auth0.app.toml  keycloak.app.toml
diagrams/: 2852fbc1-aedc-4fff-9ab3-9c5ba29cf064.json  5f6f7c85-dec8-451a-b8f9-6da82ab3b2a2.json  740f61e4-c91a-48d1-93ff-84e685ca2277.json  8ad094e0-9f5e-4737-b89a-1124d11311b8.json
e2e/src/: app.e2e-spec.ts
microgrid-protobuf/: Cargo.toml  build.rs
microgrid-protobuf/src/: lib.rs  microgrid.proto
src/: index.html  main.ts  polyfills.ts  styles.scss
src/app/: app.component.ts
src/app/auth/: auth.module.ts
src/app/data-connect/: data-connect-routing.module.ts  data-connect.component.html  data-connect.component.scss  data-connect.component.ts  data-connect.module.ts
src/app/designer/: designer-routing.module.ts  designer.component.ts
src/app/diagrams/: diagrams.component.ts  diagrams.module.ts
src/app/hmi/: hmi-routing.module.ts  hmi.component.ts  hmi.module.ts
src/app/home/: home.component.html  home.module.ts
src/app/settings/: settings-routing.module.ts
src/app/shared/: hmi.constants.ts
src/assets/i18n/: en.json
src/assets/js/: openfmb.hmi.js
src/assets/json/: toolbar.json
src/environments/: environment.dev.ts  environment.prod.ts
(+243 files in other folders)
