[package]
name="hmi_server"
version="0.0.1"
edition = "2018"

[[bin]]
name="hmi_server"

[dependencies]
tokio = { version = "1.5.0", features = ["macros", "sync", "rt-multi-thread", "time"] }
tokio-stream = "0.1.5"
warp = { version = "0.3", features = ["tls"] }
openfmb = { path = "../../openfmb-rs", features=["client", "microgrid"]}
openfmb-messages-ext = {path = "../../openfmb-rs/openfmb-messages-ext"}
microgrid-protobuf = {path = "../../openfmb-rs/microgrid-protobuf"}
serde = {version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
futures = { version = "0.3.5", default-features = false }
uuid = {version = "0.8.1", features = ["serde", "v4"]}
log = "0.4.11"
fern = { version = "0.6", features = ["colored"] }
env_logger = "0.9.0"
static_dir = "0.2.0"
pretty_env_logger = "0.4.0"
riker = "0.4.2"
nats = "0.16.0"
config = "0.10.1"
jsonwebtoken = "7.2.0"
thiserror = "1.0.21"
chrono = "0.4.10"
bytes = "1"
prost = "0.7"
pwhash = "1.0.0"
lazy_static = "1.4.0"
timer = "0.2.0"