[package]
name = "circuit_segment_manager"
version = "0.2.0"
authors = ["tupshin <tupshin@openenergysolutionsinc.com>"]
edition = "2018"

#[[bin]]
#name = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
#microgrid-protobuf = { path = "../microgrid-protobuf" }
riker = {git="https://github.com/bfrog/riker", branch="0.4.1_stable_dashmap"}
snafu = "0.6.2"
openfmb-messages = {git="https://github.com/openenergysolutions/openfmb-rs"}
openfmb-messages-ext = {git="https://github.com/openenergysolutions/openfmb-rs"}
#openfmb-ops-protobuf = {git="https://github.com/tupshin/openfmb-ops-protobuf-shuntbranch"}
prost = "0.6.1"
base64 = "0.11.0"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
chrono = "0.4.10"
config = "0.10.1"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"

bincode = "1.3.1"
getset = "0.0.9"
rand = "0.7.3"
futures = "0.3.4"
tokio = "0.2.11"
enum-as-inner = "0.3.1"
bytes = "0.5.5"
nats = "0.7"
sled = "0.31.0"
dimensioned = "0.7.0"
prost-types = "0.6.1"
microgrid-protobuf = {path = "../microgrid-protobuf"}


[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "prepush-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"]
